force-app/main/default/objects/cgcloud__Color_Schema__c/cgcloud__Color_Schema__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines different Sales Organization dependent property based color schemes for the Trade Calendar.</description>
    <label>Color Schema</label>
</CustomObject>