force-app/main/default/objects/cgcloud__Color_Schema__c/fields/cgcloud__Color_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Color_Code__c</fullName>
    <description>Value for which the defined color is used.</description>
    <inlineHelpText>RGB Codes</inlineHelpText>
    <label>Color Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>