force-app/main/default/objects/cgcloud__Color_Schema__c/fields/cgcloud__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Name__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <inlineHelpText>Defines the field on which the filter is defined. At the moment this is restricted to Promotion fields. For Ex: Phase__c</inlineHelpText>
    <label>Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>