force-app/main/default/objects/cgcloud__Color_Schema__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <inlineHelpText>Name of the Sales Org for which this Record is used</inlineHelpText>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>