force-app/main/default/objects/cgcloud__Color_Schema__c/fields/cgcloud__Schema_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Schema_Name__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <inlineHelpText>Defines where the color scheme is used.For Ex: TradeCalendar_Phase</inlineHelpText>
    <label>Schema Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>