force-app/main/default/objects/cgcloud__Color_Schema__c/fields/cgcloud__Transparency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transparency__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <inlineHelpText>Transparency of the colored object. Default: 0%</inlineHelpText>
    <label>Transparency</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>