force-app/main/default/objects/cgcloud__Color_Schema__c/fields/cgcloud__Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value__c</fullName>
    <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
    <inlineHelpText>Value for which the defined color is used.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>